--- a/pom.xml
+++ b/pom.xml
@@ -8,22 +8,25 @@
     <artifactId>poi.tutorial</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
+    <properties>
+        <poi.version>3.14</poi.version>
+        <java.version>1.8</java.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
-    <properties>
-        <poi.version>3.14</poi.version>
-    </properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
